# roopert-rs

./: Cargo.toml  LICENSE  README.md
members/macro_common/: Cargo.toml
members/macro_common/src/: accessors_attribute.rs  extends_attribute.rs  fields_attribute.rs  generate_trait.rs  getter_attribute.rs  lib.rs  parent_attribute.rs  root_attribute.rs  setter_attribute.rs
members/macro_common/src/parse/: is_attribute.rs  mod.rs  path.rs
members/macro_parent/: Cargo.toml
members/macro_parent/src/: lib.rs
members/macro_root/: Cargo.toml
members/macro_root/src/: lib.rs
members/runtime/: Cargo.toml
members/runtime/src/: fields.rs  lib.rs
src/: lib.rs
tests/: accessors_ops.rs  attribute_generics.rs  attribute_parsing.rs  fields_generation.rs
