[package]
name = "roopert"
version = "0.1.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
categories = ["rust-patterns", "data-structures"]
description = "Another object-oriented toolkit for Rust"
exclude = [".github/**"]
homepage = "https://github.com/NGnius/roopert-rs"
keywords = ["oop", "macro", "object-oriented"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NGnius/roopert-rs"

[workspace]
exclude = []
members = ["members/*"]

[features]
default = ["macros"]

macros = ["macro_root"]

[dependencies]

# internal dependencies
macro_root = { path = "members/macro_root", optional = true} #, features = ["verbose"] }
