[package]
name = "roopert"
version = "0.3.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
categories = ["rust-patterns", "data-structures"]
description = "Another object-oriented toolkit for Rust"
exclude = [".github/**"]
homepage = "https://github.com/NGnius/roopert-rs"
keywords = ["oop", "macro", "object-oriented"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NGnius/roopert-rs"

[workspace]
exclude = []
members = ["members/*"]

[features]
default = ["macros"]

macros = ["roopert_macro_root"]
verbose = ["roopert_macro_root/verbose", "roopert_runtime/verbose"]

[dependencies]

# internal dependencies
roopert_macro_root = { path = "members/macro_root", optional = true, version = "0.3.0"}
roopert_runtime = { path = "members/runtime", version = "0.3.0"}
