[package]
name = "roopert_macro_common"
version = "0.3.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
categories = ["rust-patterns", "data-structures"]
description = "Another object-oriented toolkit for Rust (common data)"
exclude = [".github/**"]
homepage = "https://github.com/NGnius/roopert-rs"
keywords = ["oop", "macro", "object-oriented"]
license = "MIT"
repository = "https://github.com/NGnius/roopert-rs"

[features]
verbose = []

[dependencies]
syn = { version = "^1", features = ["full", "parsing", "extra-traits"] }
quote = { version = "^1" }
proc-macro2 = { version = "^1" }
proc-macro-error = { version = "^1" }
