[package]
name = "macro_root"
version = "0.1.0"
edition = "2021"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]

[lib]
proc-macro = true

[features]
default = []

verbose = []


[dependencies]
syn = { version = "^1" }
quote = { version = "^1" }
proc-macro-error = { version = "^1" }

# internal dependencies
macro_common = { path = "../macro_common" } #, features = ["verbose"]}
