[package]
name = "roopert_macro_root"
version = "0.2.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
categories = ["rust-patterns", "data-structures"]
description = "Another object-oriented toolkit for Rust (macro)"
exclude = [".github/**"]
homepage = "https://github.com/NGnius/roopert-rs"
keywords = ["oop", "macro", "object-oriented"]
license = "MIT"
repository = "https://github.com/NGnius/roopert-rs"

[lib]
proc-macro = true

[features]
default = []

verbose = []


[dependencies]
syn = { version = "^1" }
quote = { version = "^1" }
proc-macro-error = { version = "^1" }

# internal dependencies
roopert_macro_common = { path = "../macro_common", features = ["verbose"]}
